--- a/scenes/pregunta10.html
+++ b/scenes/pregunta10.html
@@ -24,10 +24,10 @@
                 <div class="opcion" onclick="getRespuesta(0, this)"> URTICARIA IDIOPATICA. </div>
             </div>
             <div class="col-md-6">
-                <div id="correcta" class="opcion" onclick="getRespuesta(1, this)"> URTICARIA CRONICA IDIOPATICA. </div>
+                <div class="opcion" onclick="getRespuesta(0, this)"> URTICARIA CRONICA IDIOPATICA. </div>
             </div>
             <div class="col-md-6">
-                <div class="opcion" onclick="getRespuesta(0, this)"> URTICARIA CRONICA ALERGICA. </div>
+                <div id="correcta" class="opcion" onclick="getRespuesta(1, this)"> URTICARIA CRONICA ALERGICA. </div>
             </div>
         </div> 
     </div> 
