--- a/scenes/pregunta15.html
+++ b/scenes/pregunta15.html
@@ -12,7 +12,7 @@
     <div class="frame">
         <div class="row preguntas-container">
             <div class="col-md-12 pista-container">
-                <div class="pista">ALLEGRA mejora significativamente los ______ </div>
+                <div class="pista">ALLEGRA mejora significativamente los ______ de la Rinitis Al&eacute;rgica</div>
             </div>
             <div class="col-md-12 preguntas-container">
                 <div class="pregunta">DOSRLOE</div>
