Correcciones ortograficas y de diseño

--- a/scenes/pregunta8.html
+++ b/scenes/pregunta8.html
@@ -12,7 +12,7 @@
     <div class="frame">
         <div class="row preguntas-container">
             <div class="col-md-12 pista-container">
-                <div class="pista"> ALLEGRA logra una ______ ______ comparado con ortos antihistaminicos de 2da generaci&iacute;n </div>
+                <div class="pista"> ALLEGRA logra una ______ ______ comparado con otros antihistam&iacute;nicos de 2da generaci&oacute;n </div>
             </div>
             <div class="col-md-12 preguntas-container">
                 <div class="pregunta">ARDAPI INCOCA</div>
