--- a/scenes/pregunta10.html
+++ b/scenes/pregunta10.html
@@ -18,16 +18,16 @@
                 <div class="pregunta">CAIAURTRI NRACIOC CADIOPITAL</div>
             </div>
             <div class="col-md-6">
-                <div class="opcion" onclick="getRespuesta(0, this)"> CRONICA IDIOPATI. </div>
+                <div class="opcion" onclick="getRespuesta(0, this)"> CR&Oacute;NICA IDIOPATI. </div>
             </div>
             <div class="col-md-6">
                 <div class="opcion" onclick="getRespuesta(0, this)"> URTICARIA IDIOPATICA. </div>
             </div>
             <div class="col-md-6">
-                <div class="opcion" onclick="getRespuesta(0, this)"> URTICARIA CRONICA IDIOPATICA. </div>
+                <div class="opcion" onclick="getRespuesta(0, this)"> URTICARIA CR&Oacute;NICA IDIOPATICA. </div>
             </div>
             <div class="col-md-6">
-                <div id="correcta" class="opcion" onclick="getRespuesta(1, this)"> URTICARIA CRONICA ALERGICA. </div>
+                <div id="correcta" class="opcion" onclick="getRespuesta(1, this)"> URTICARIA CR&Oacute;NICA AL&Eacute;RGICA. </div>
             </div>
         </div> 
     </div> 
