--- a/scenes/pregunta14.html
+++ b/scenes/pregunta14.html
@@ -12,7 +12,7 @@
     <div class="frame">
         <div class="row preguntas-container">
             <div class="col-md-12 pista-container">
-                <div class="pista">ALLEGRA 180 disminuye eficazmente el numero de...</div>
+                <div class="pista">ALLEGRA 180 disminuye eficazmente el n&uacute;mero de...</div>
             </div>
             <div class="col-md-12 preguntas-container">
                 <div class="pregunta">BSAHOEN</div>
