--- a/scenes/pregunta6.html
+++ b/scenes/pregunta6.html
@@ -12,7 +12,7 @@
     <div class="frame">
         <div class="row preguntas-container">
             <div class="col-md-12 pista-container">
-                <div class="pista">ALLEGRA No altera la _________ para producir veh&iacute;culos por su efecto no sedante:</div>
+                <div class="pista">ALLEGRA No altera la _________ para conducir veh&iacute;culos por su efecto no sedante:</div>
             </div>
             <div class="col-md-12 preguntas-container">
                 <div class="pregunta">DPICDAAAC</div>
