--- a/scenes/pregunta7.html
+++ b/scenes/pregunta7.html
@@ -12,7 +12,7 @@
     <div class="frame"> 
         <div class="row preguntas-container">
             <div class="col-md-12 pista-container">
-                <div class="pista">NING&Uacute;N otro antihistam&iacute;nico ha sido estudiado tanto como ALLEGRA en cuanto a segurdad ______________ </div>
+                <div class="pista">NING&Uacute;N otro antihistam&iacute;nico ha sido estudiado tanto como ALLEGRA en cuanto a seguridad ______________ </div>
             </div>
             <div class="col-md-12 preguntas-container">
                 <div class="pregunta">CUCRDVLAOIRASA</div>
