cambios respuestas corresctas

--- a/scenes/pregunta17.html
+++ b/scenes/pregunta17.html
@@ -18,13 +18,13 @@
                 <div class="pregunta">EDSOROETNSCLCA</div>
             </div>
             <div class="col-md-6">
-                <div class="opcion" onclick="getRespuesta(0, this)"> DESCONECTARLOS. </div>
+                <div id="correcta" class="opcion" onclick="getRespuesta(1, this)"> DESCONECTARLOS. </div>
             </div>
             <div class="col-md-6">
                 <div class="opcion" onclick="getRespuesta(0, this)"> AISLARLOS. </div>
             </div>
             <div class="col-md-6">
-                <div id="correcta" class="opcion" onclick="getRespuesta(1, this)"> DESCONCENTRARLOS . </div>
+                <div class="opcion" onclick="getRespuesta(0, this)"> DESCONCENTRARLOS . </div>
             </div>
             <div class="col-md-6">
                 <div class="opcion" onclick="getRespuesta(0, this)"> DESCUIDARLOS. </div>
