--- a/scenes/pregunta8.html
+++ b/scenes/pregunta8.html
@@ -24,10 +24,10 @@
                 <div class="opcion" onclick="getRespuesta(0, this)"> EFICAZ ACCI&Oacute;N. </div>
             </div>
             <div class="col-md-6">
-                <div id="correcta" class="opcion" onclick="getRespuesta(1, this)"> CORTA ACCI&Oacute;N. </div>
+                <div class="opcion" onclick="getRespuesta(0, this)"> CORTA ACCI&Oacute;N. </div>
             </div>
             <div class="col-md-6">
-                <div class="opcion" onclick="getRespuesta(0, this)"> R&Aacute;PIDA ACCI&Oacute;N. </div>
+                <div id="correcta" class="opcion" onclick="getRespuesta(1, this)"> R&Aacute;PIDA ACCI&Oacute;N. </div>
             </div>
         </div>  
     </div>
