--- a/scenes/pregunta17.html
+++ b/scenes/pregunta17.html
@@ -12,7 +12,7 @@
     <div class="frame">
         <div class="row preguntas-container">
             <div class="col-md-12 pista-container">
-                <div class="pista">ALLEGRA predi&aacute;trico controla los s&iacute;ntomas de las alergias en los niños sin ______________ de su aprendizaje.</div>
+                <div class="pista">ALLEGRA predi&aacute;trico controla los s&iacute;ntomas de la Alergia en los niños sin ______________ de su aprendizaje.</div>
             </div>
             <div class="col-md-12 preguntas-container">
                 <div class="pregunta">EDSOROETNSCLCA</div>
