Cambios pedidos por clinete

--- a/scenes/pregunta10.html
+++ b/scenes/pregunta10.html
@@ -24,10 +24,10 @@
                 <div class="opcion" onclick="getRespuesta(0, this)"> URTICARIA IDIOPATICA. </div>
             </div>
             <div class="col-md-6">
-                <div class="opcion" onclick="getRespuesta(0, this)"> URTICARIA CR&Oacute;NICA IDIOPATICA. </div>
+                <div id="correcta" class="opcion" onclick="getRespuesta(1, this)"> URTICARIA CR&Oacute;NICA IDIOP&Aacute;TICA. </div>
             </div>
             <div class="col-md-6">
-                <div id="correcta" class="opcion" onclick="getRespuesta(1, this)"> URTICARIA CR&Oacute;NICA AL&Eacute;RGICA. </div>
+                <div class="opcion" onclick="getRespuesta(0, this)"> URTICARIA CR&Oacute;NICA AL&Eacute;RGICA. </div>
             </div>
         </div> 
     </div> 
