--- a/scenes/pregunta18.html
+++ b/scenes/pregunta18.html
@@ -12,7 +12,7 @@
     <div class="frame">
         <div class="row preguntas-container">
             <div class="col-md-12 pista-container">
-                <div class="pista">ALLEGRA jarabe es ____ ________ </div>
+                <div class="pista">ALLEGRA jarabe es ____ ________ por los niños y f&aacute;cil de administrar por los padres</div>
             </div>
             <div class="col-md-12 preguntas-container">
                 <div class="pregunta">INBE POTECADA</div>
