--- a/scenes/pregunta20.html
+++ b/scenes/pregunta20.html
@@ -10,24 +10,25 @@
 </head>
 <body>
     <div class="frame">
-        <div class="row preguntas-container"> 
+        <div class="row preguntas-container">
             <div class="col-md-12 pista-container">
-                <div class="pista">ALLEGRA jarabe es _____ _ _______ de administrar gracias a su dosificador.</div>
+                <div class="pista">ALLEGRA fexofenadina es un antihistam&iacute;nico de segunda generaci&oacute;n <br>
+                ___ _____ ________ para el control de los s&iacute;ntomas de las alergias.</div>
             </div>
             <div class="col-md-12 preguntas-container">
-                <div class="pregunta">LAIFC Y ROCTCAIP</div>
+                <div class="pregunta">INS CEEFOT IDOEASVT</div>
             </div>
             <div class="col-md-6">
-                <div class="opcion" onclick="getRespuesta(0, this)"> F&Aacute;CIL. </div>
+                <div class="opcion" onclick="getRespuesta(0, this)"> CON EFECTO SEDATIVO. </div>
             </div>
             <div class="col-md-6">
-                <div class="opcion" onclick="getRespuesta(0, this)"> PR&Aacute;CTICO. </div>
+                <div class="opcion" onclick="getRespuesta(0, this)"> SIN EFECTO. </div>
             </div>
             <div class="col-md-6">
-                <div id="correcta" class="opcion" onclick="getRespuesta(1, this)"> F&Aacute;CIL Y PR&Aacute;CTICO. </div>
+                <div id="correcta" class="opcion" onclick="getRespuesta(1, this)"> SIN EFECTO SEDATIVO. </div>
             </div>
             <div class="col-md-6">
-                <div class="opcion" onclick="getRespuesta(0, this)"> MUY PR&Aacute;CTICO. </div>
+                <div class="opcion" onclick="getRespuesta(0, this)"> SEDATIVO. </div>
             </div>
         </div> 
     </div> 
@@ -41,7 +42,7 @@
         </div>
     </div>
     <script>
-        var nextQuestion = 14;
+        var nextQuestion = 21;
     </script>
     <script src="../js/app.js"></script>
     <script src="../css/bootstrap/js/bootstrap.min.js"></script>
