--- a/scenes/pregunta10.html
+++ b/scenes/pregunta10.html
@@ -15,7 +15,7 @@
                 <div class="pista">La indicaci&oacute;n aprobada de ALLEGRA 180 es...</div>
             </div>
             <div class="col-md-12 preguntas-container">
-                <div class="pregunta">CAIAURTRI NRACIOC CADIOPITAL</div>
+                <div class="pregunta">CAIAURTRI NRACIOC CADIOPITAI</div>
             </div>
             <div class="col-md-6">
                 <div class="opcion" onclick="getRespuesta(0, this)"> CR&Oacute;NICA IDIOPATI. </div>
