--- a/scenes/pregunta15.html
+++ b/scenes/pregunta15.html
@@ -21,13 +21,13 @@
                 <div class="opcion" onclick="getRespuesta(0, this)"> PROCESOS. </div>
             </div>
             <div class="col-md-6"> 
-                <div class="opcion" onclick="getRespuesta(0, this)"> DOLORES. </div>
+                <div id="correcta" class="opcion" onclick="getRespuesta(1, this)"> DOLORES. </div>
             </div>
             <div class="col-md-6">
                 <div class="opcion" onclick="getRespuesta(0, this)"> CAMBIOS. </div>
             </div>
             <div class="col-md-6">
-                <div id="correcta" class="opcion" onclick="getRespuesta(1, this)"> S&Iacute;NTOMAS. </div>
+                <div onclick="getRespuesta(0, this)" class="opcion"> S&Iacute;NTOMAS. </div>
             </div>
         </div> 
     </div> 
